--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "Task-Tracker",
+  "name": "WilbroGreenEnergy",
   "version": "1.0.0",
-  "description": "task tracker",
+  "description": "backend-server",
   "main": "server.js",
   "license": "MIT",
   "scripts":{
     "start": "node server.js"
   },
-  "author": "sait ibrahim",
+  "author": "Christan Wilbert",
   "dependencies": {
     "json-server": "^0.17.0"
   }
