--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WilbroGreenEnergy",
+  "name": "wilbro-green-energy",
   "version": "1.0.0",
   "description": "backend-server",
   "main": "server.js",
