--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "WilbroGreenEnergy",
+  "name": "wilbro-green-energy",
   "version": "1.0.0",
-  "description": "backend-server",
+  "description": "backend server",
   "main": "server.js",
   "license": "MIT",
   "scripts":{
